# Simple-C-Search-Engine

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  input.txt
.github/: dependabot.yml
.github/workflows/: cmake-multi-platform.yml
include/: document.h  gtrie.h  gtrie_io.h  index.h  index_writer.h  indexer.h  logging.h
include/common/: gtrie.h  index.h  indexer.h
include/indexer/: indexer_main.h
include/server/: server.h
src/common/: document.c  gtrie.c  gtrie_io.c  index.c  index_writer.c  indexer.c  logging.c
src/index_writer/: index_writer_main.c
src/indexer/: indexer.c  indexer.h  indexer_main.c
src/server/: server.c  server.h
test/: test_document.c  test_gtrie.c  test_gtrie_io.c  test_index.c  test_index_writer.c  test_indexer.c  test_server.c
